@@ -1,0 +1,229 @@
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.037.
+use strict;
+use warnings;
+
+use 5.008;
+
+use ExtUtils::MakeMaker;
+
+use File::ShareDir::Install;
+$File::ShareDir::Install::INCLUDE_DOTFILES = 1;
+$File::ShareDir::Install::INCLUDE_DOTDIRS = 1;
+install_share module => "Dist::Zilla::MintingProfile::Author::KENTNL", "share\/profiles";
+
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "BeLike::KENTNL when you build your distributions.",
+  "AUTHOR" => "Kent Fredric <kentnl\@cpan.org>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0,
+    "File::ShareDir::Install" => "0.10"
+  },
+  "DISTNAME" => "Dist-Zilla-PluginBundle-Author-KENTNL",
+  "EXE_FILES" => [],
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.008",
+  "NAME" => "Dist::Zilla::PluginBundle::Author::KENTNL",
+  "PREREQ_PM" => {
+    "Carp" => 0,
+    "Dist::Zilla" => "5.011",
+    "Dist::Zilla::File::FromCode" => 0,
+    "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.004002",
+    "Dist::Zilla::Plugin::Author::KENTNL::TravisCI" => "0.001002",
+    "Dist::Zilla::Plugin::Authority" => "1.006",
+    "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+    "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+    "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+    "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+    "Dist::Zilla::Plugin::Git::Check" => 0,
+    "Dist::Zilla::Plugin::Git::Commit" => 0,
+    "Dist::Zilla::Plugin::Git::CommitBuild" => 0,
+    "Dist::Zilla::Plugin::Git::Contributors" => "0.006",
+    "Dist::Zilla::Plugin::Git::GatherDir" => 0,
+    "Dist::Zilla::Plugin::Git::NextRelease" => "0.004000",
+    "Dist::Zilla::Plugin::Git::Tag" => 0,
+    "Dist::Zilla::Plugin::GithubMeta" => 0,
+    "Dist::Zilla::Plugin::License" => 0,
+    "Dist::Zilla::Plugin::MakeMaker" => 0,
+    "Dist::Zilla::Plugin::Manifest" => 0,
+    "Dist::Zilla::Plugin::ManifestSkip" => 0,
+    "Dist::Zilla::Plugin::MetaConfig" => 0,
+    "Dist::Zilla::Plugin::MetaData::BuiltWith" => "1.004000",
+    "Dist::Zilla::Plugin::MetaJSON" => 0,
+    "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14000001",
+    "Dist::Zilla::Plugin::MetaTests" => 0,
+    "Dist::Zilla::Plugin::MetaYAML::Minimal" => 0,
+    "Dist::Zilla::Plugin::MinimumPerl" => 0,
+    "Dist::Zilla::Plugin::PodCoverageTests" => 0,
+    "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
+    "Dist::Zilla::Plugin::PodWeaver" => 0,
+    "Dist::Zilla::Plugin::Prereqs" => 0,
+    "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => 0,
+    "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => 0,
+    "Dist::Zilla::Plugin::Prereqs::Upgrade" => 0,
+    "Dist::Zilla::Plugin::Readme::Brief" => 0,
+    "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+    "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => 0,
+    "Dist::Zilla::Plugin::RunExtraTests" => 0,
+    "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
+    "Dist::Zilla::Plugin::Test::Compile::PerFile" => 0,
+    "Dist::Zilla::Plugin::Test::EOL" => 0,
+    "Dist::Zilla::Plugin::Test::Kwalitee" => 0,
+    "Dist::Zilla::Plugin::Test::MinimumVersion" => 0,
+    "Dist::Zilla::Plugin::Test::Perl::Critic" => 0,
+    "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
+    "Dist::Zilla::Plugin::TestRelease" => 0,
+    "Dist::Zilla::Plugin::Twitter" => 0,
+    "Dist::Zilla::Plugin::UploadToCPAN" => 0,
+    "Dist::Zilla::Role::BundleDeps" => 0,
+    "Dist::Zilla::Role::FileGatherer" => 0,
+    "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
+    "Dist::Zilla::Role::PluginBundle" => 0,
+    "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
+    "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
+    "Dist::Zilla::Util::ConfigDumper" => 0,
+    "Dist::Zilla::Util::CurrentCmd" => 0,
+    "Moose" => 0,
+    "Moose::Util::TypeConstraints" => 0,
+    "String::Formatter" => 0,
+    "namespace::autoclean" => 0,
+    "strict" => 0,
+    "utf8" => 0,
+    "version" => 0,
+    "warnings" => 0
+  },
+  "TEST_REQUIRES" => {
+    "Capture::Tiny" => 0,
+    "Dist::Zilla::Plugin::Author::KENTNL::TravisCI" => "0.001002",
+    "Dist::Zilla::Plugin::Git::NextVersion::Sanitized" => 0,
+    "Dist::Zilla::Plugin::ModuleBuild" => 0,
+    "Dist::Zilla::Plugin::Prereqs::MatchInstalled" => 0,
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
+    "File::pushd" => 0,
+    "FindBin" => 0,
+    "Git::Wrapper" => 0,
+    "Module::Build" => 0,
+    "Module::Metadata" => 0,
+    "Path::Class::Dir" => 0,
+    "Path::Tiny" => 0,
+    "Test::DZil" => 0,
+    "Test::Fatal" => 0,
+    "Test::File::ShareDir" => "0.3.0",
+    "Test::More" => "0.89",
+    "Test::Output" => 0,
+    "lib" => 0
+  },
+  "VERSION" => "2.024003",
+  "test" => {
+    "TESTS" => "t/*.t t/00-compile/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "Capture::Tiny" => 0,
+  "Carp" => 0,
+  "Dist::Zilla" => "5.011",
+  "Dist::Zilla::File::FromCode" => 0,
+  "Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes" => "0.004002",
+  "Dist::Zilla::Plugin::Author::KENTNL::TravisCI" => "0.001002",
+  "Dist::Zilla::Plugin::Authority" => "1.006",
+  "Dist::Zilla::Plugin::AutoPrereqs" => 0,
+  "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
+  "Dist::Zilla::Plugin::ConfirmRelease" => 0,
+  "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
+  "Dist::Zilla::Plugin::Git::Check" => 0,
+  "Dist::Zilla::Plugin::Git::Commit" => 0,
+  "Dist::Zilla::Plugin::Git::CommitBuild" => 0,
+  "Dist::Zilla::Plugin::Git::Contributors" => "0.006",
+  "Dist::Zilla::Plugin::Git::GatherDir" => 0,
+  "Dist::Zilla::Plugin::Git::NextRelease" => "0.004000",
+  "Dist::Zilla::Plugin::Git::NextVersion::Sanitized" => 0,
+  "Dist::Zilla::Plugin::Git::Tag" => 0,
+  "Dist::Zilla::Plugin::GithubMeta" => 0,
+  "Dist::Zilla::Plugin::License" => 0,
+  "Dist::Zilla::Plugin::MakeMaker" => 0,
+  "Dist::Zilla::Plugin::Manifest" => 0,
+  "Dist::Zilla::Plugin::ManifestSkip" => 0,
+  "Dist::Zilla::Plugin::MetaConfig" => 0,
+  "Dist::Zilla::Plugin::MetaData::BuiltWith" => "1.004000",
+  "Dist::Zilla::Plugin::MetaJSON" => 0,
+  "Dist::Zilla::Plugin::MetaProvides::Package" => "1.14000001",
+  "Dist::Zilla::Plugin::MetaTests" => 0,
+  "Dist::Zilla::Plugin::MetaYAML::Minimal" => 0,
+  "Dist::Zilla::Plugin::MinimumPerl" => 0,
+  "Dist::Zilla::Plugin::ModuleBuild" => 0,
+  "Dist::Zilla::Plugin::PodCoverageTests" => 0,
+  "Dist::Zilla::Plugin::PodSyntaxTests" => 0,
+  "Dist::Zilla::Plugin::PodWeaver" => 0,
+  "Dist::Zilla::Plugin::Prereqs" => 0,
+  "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => 0,
+  "Dist::Zilla::Plugin::Prereqs::MatchInstalled" => 0,
+  "Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled" => 0,
+  "Dist::Zilla::Plugin::Prereqs::Upgrade" => 0,
+  "Dist::Zilla::Plugin::Readme::Brief" => 0,
+  "Dist::Zilla::Plugin::ReadmeAnyFromPod" => 0,
+  "Dist::Zilla::Plugin::RewriteVersion::Sanitized" => 0,
+  "Dist::Zilla::Plugin::RunExtraTests" => 0,
+  "Dist::Zilla::Plugin::Test::CPAN::Changes" => 0,
+  "Dist::Zilla::Plugin::Test::Compile::PerFile" => 0,
+  "Dist::Zilla::Plugin::Test::EOL" => 0,
+  "Dist::Zilla::Plugin::Test::Kwalitee" => 0,
+  "Dist::Zilla::Plugin::Test::MinimumVersion" => 0,
+  "Dist::Zilla::Plugin::Test::Perl::Critic" => 0,
+  "Dist::Zilla::Plugin::Test::ReportPrereqs" => 0,
+  "Dist::Zilla::Plugin::TestRelease" => 0,
+  "Dist::Zilla::Plugin::Twitter" => 0,
+  "Dist::Zilla::Plugin::UploadToCPAN" => 0,
+  "Dist::Zilla::Role::BundleDeps" => 0,
+  "Dist::Zilla::Role::FileGatherer" => 0,
+  "Dist::Zilla::Role::MintingProfile::ShareDir" => 0,
+  "Dist::Zilla::Role::PluginBundle" => 0,
+  "Dist::Zilla::Role::PluginBundle::Config::Slicer" => 0,
+  "Dist::Zilla::Role::PluginBundle::PluginRemover" => 0,
+  "Dist::Zilla::Util::ConfigDumper" => 0,
+  "Dist::Zilla::Util::CurrentCmd" => 0,
+  "ExtUtils::MakeMaker" => 0,
+  "File::ShareDir::Install" => "0.10",
+  "File::Spec" => 0,
+  "File::pushd" => 0,
+  "FindBin" => 0,
+  "Git::Wrapper" => 0,
+  "Module::Build" => 0,
+  "Module::Metadata" => 0,
+  "Moose" => 0,
+  "Moose::Util::TypeConstraints" => 0,
+  "Path::Class::Dir" => 0,
+  "Path::Tiny" => 0,
+  "String::Formatter" => 0,
+  "Test::DZil" => 0,
+  "Test::Fatal" => 0,
+  "Test::File::ShareDir" => "0.3.0",
+  "Test::More" => "0.89",
+  "Test::Output" => 0,
+  "lib" => 0,
+  "namespace::autoclean" => 0,
+  "strict" => 0,
+  "utf8" => 0,
+  "version" => 0,
+  "warnings" => 0
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
+
+{
+package
+MY;
+use File::ShareDir::Install qw(postamble);
+}
