@@ -201,11 +201,14 @@ If true, use `[BumpVersionAfterRelease]`  and `[RewriteVersions::Sanitized]` ins
 
 An array of files generated by `Dist::Zilla` build to copy from the built dist back to the source dist
 
+If not specified, the default contents are as follows:
+
     copyfiles = LICENSE
-    ; Warning: These two are presently bad ideas
-    ; and will ultimately give version mismatches
     copyfiles = Makefile.PL
-    copyfiles = META.json
+
+These defaults can be wiped with:
+
+    copyfiles = none
 
 ## `srcreadme`
 
