@@ -120,6 +120,7 @@ exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
 exclude_filename = LICENSE
+exclude_filename = Makefile.PL
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
@@ -136,6 +137,7 @@ skip_perls = 5.8
 
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
+copy = Makefile.PL
 
 [MetaTests / @Author::KENTNL/MetaTests]
 
@@ -171,7 +173,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.024002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.024003
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
