@@ -265,19 +265,22 @@ has 'bumpversions' => (
 
 An array of files generated by C<Dist::Zilla> build to copy from the built dist back to the source dist
 
+If not specified, the default contents are as follows:
+
   copyfiles = LICENSE
-  ; Warning: These two are presently bad ideas
-  ; and will ultimately give version mismatches
   copyfiles = Makefile.PL
-  copyfiles = META.json
+
+These defaults can be wiped with:
+
+  copyfiles = none
 
 =cut
 
 has copyfiles => (
-  is      => ro  =>,
-  isa     => 'ArrayRef[ Str ]',
-  lazy    => 1,
-  default => sub { [] },
+  is   => ro =>,
+  isa  => 'ArrayRef[ Str ]',
+  lazy => 1,
+  default => sub { [ 'LICENSE', 'Makefile.PL' ] },
 );
 
 =attr C<srcreadme>
@@ -392,11 +395,22 @@ sub _configure_basic_metadata {
   return;
 }
 
+sub _none_match {
+  my ( $item, @list ) = @_;
+  for my $list_item (@list) {
+    return if $item eq $list_item;
+  }
+  return 1;
+}
+
 sub _configure_basic_files {
   my ($self)         = @_;
   my (@ignore_files) = qw( README README.mkdn README.pod );
-
-  push @ignore_files, @{ $self->copyfiles };
+  my (@copyfiles)    = ();
+  if ( _none_match 'none', @{ $self->copyfiles } ) {
+    push @copyfiles, @{ $self->copyfiles };
+  }
+  push @ignore_files, @copyfiles;
 
   $self->add_plugin(
     'Git::GatherDir' => {
@@ -411,8 +425,8 @@ sub _configure_basic_files {
   $self->add_plugin( 'Manifest'                 => {} );
   $self->add_plugin( 'Author::KENTNL::TravisCI' => { ':version' => '0.001002' } );
 
-  if ( @{ $self->copyfiles } ) {
-    $self->add_named_plugin( 'CopyXBuild' => 'CopyFilesFromBuild', { copy => [ @{ $self->copyfiles } ] } );
+  if (@copyfiles) {
+    $self->add_named_plugin( 'CopyXBuild' => 'CopyFilesFromBuild', { copy => [@copyfiles] } );
   }
 
   return;
